Add index view for charges and added styles Add capybara and specs

--- a/source/app/assets/stylesheets/application.scss
+++ b/source/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+.charges {
+  .failed {
+    background-color: #FF0000;
+  }
+  .disputed {
+    background-color:#FF5400;
+  }
+}
